WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220893
SVG reference filter chain with errors applies only some of the filters, producing incorrect output
https://bugs.webkit.org/show_bug.cgi?id=220893
Summary
SVG reference filter chain with errors applies only some of the filters, prod...
Simon Fraser (smfr)
Reported
2021-01-23 10:41:09 PST
https://codepen.io/cobra_winfrey/pen/WNGJPXm
looks very wrong in WebKit
Attachments
Reduction
(744 bytes, text/html)
2021-01-23 10:43 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(7.50 KB, patch)
2021-01-24 11:05 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-01-23 10:43:25 PST
Content has: <filter id='filter1'> <feturbulence basefrequency='0.005 0.005' id='frequency1' numoctaves='1' result='noise' seed='1' type='fractalNoise'></feturbulence> <fedisplacementmap id='displacement1' in2='fractalNoise' in='SourceGraphic' scale='0'></fedisplacementmap> </filter> and we fail to find the "in2" input for the <fedisplacementmap>
Simon Fraser (smfr)
Comment 2
2021-01-23 10:43:36 PST
Created
attachment 418228
[details]
Reduction
Simon Fraser (smfr)
Comment 3
2021-01-23 10:51:05 PST
The content is buggy; this is about error handling.
Simon Fraser (smfr)
Comment 4
2021-01-24 11:05:18 PST
Created
attachment 418239
[details]
Patch
EWS
Comment 5
2021-01-24 16:28:49 PST
Committed
r271785
: <
https://trac.webkit.org/changeset/271785
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418239
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-01-24 16:29:18 PST
<
rdar://problem/73552017
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug