SVG reference filter chain with errors applies only some of the filters, producing incorrect output https://bugs.webkit.org/show_bug.cgi?id=220893

Reviewed by Sam Weinig.

Source/WebCore:

If the CSS filter property refers to an invalid reference filter, ensure that
the entire reference filter is skipped. Previously, we'd add elements of the reference
filter up to the invalid one.

This behavior matches Gecko and Blink.

Tests: css3/filters/invalid-reference-filter-in-chain.html
       css3/filters/invalid-reference-filter.html

* rendering/CSSFilter.cpp:
(WebCore::CSSFilter::buildReferenceFilter):

LayoutTests:

* css3/filters/invalid-reference-filter-expected.html: Added.
* css3/filters/invalid-reference-filter-in-chain-expected.html: Added.
* css3/filters/invalid-reference-filter-in-chain.html: Added.
* css3/filters/invalid-reference-filter.html: Added.


Canonical link: https://commits.webkit.org/233291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271785 268f45cc-cd09-0410-ab3c-d52691b4dbfc